src/objects/Internal_QA__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>An article that answers an internal question.</description>
    <fields>
        <fullName>Answer__c</fullName>
        <description>This content answers the article question.</description>
        <inlineHelpText>This content answers the article question.</inlineHelpText>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expiration__c</fullName>
        <inlineHelpText>An expiration date for time-sensitive content. If filled, a notification will be sent to article creator near that date.</inlineHelpText>
        <label>Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <inlineHelpText>Keywords to improve article search.</inlineHelpText>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <description>Related knowledge articles that may inform this article.</description>
        <inlineHelpText>Related knowledge articles that may inform this article.</inlineHelpText>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Relevant_Links__c</fullName>
        <description>Links to relevant outside sources.</description>
        <inlineHelpText>Links to relevant outside sources.</inlineHelpText>
        <label>Relevant Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Internal Q&amp;A</label>
    <pluralLabel>Internal Q&amp;As</pluralLabel>
</CustomObject>